--- a/Ychat/app/build.gradle
+++ b/Ychat/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.yd.ychat"
-        minSdkVersion 23
+        minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,8 @@ android {
         }
 
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -36,4 +38,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
