--- a/Ychat/app/src/main/AndroidManifest.xml
+++ b/Ychat/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <!-- Required -->
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -24,24 +25,25 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".act.WelcomeActivity">
+        <activity android:name=".act.WelcomeActivity"
+            android:theme="@style/MyTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".act.MainActivity"></activity>
+        <activity android:name=".act.RegisterActivity"
+            android:theme="@style/MyTheme"></activity>
         <!-- 设置环信应用的AppKey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
@@ -69,8 +71,14 @@
         </receiver>
 
         <activity
+            android:theme="@style/MyTheme"
             android:name=".act.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login"
+            android:launchMode="singleTask" />
+        <activity android:name=".act.ChatActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:launchMode="singleTop"
+            ></activity>
     </application>
 
 </manifest>
